# numa

./: .SRCINFO  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PKGBUILD  README.md  build.rs  com.numa.dns.plist  deploy.sh  dns_fun.toml  install.sh  numa.service  numa.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  homebrew-bump.yml  publish-aur-test.yml  publish-aur.yml  release.yml  static.yml
bench/: README.md  dns-bench.sh  results.json
benches/: dnssec.rs  hot_path.rs  numa-bench-recursive.toml  numa-bench.toml  recursive_compare.rs  throughput.rs
blog/: dns-from-scratch.md  dnssec-from-scratch.md  dot-from-scratch.md  fixing-doh-tail-latency.md
docs/: development-plan.md  numa-network-economics.md  show-hn-draft.md  viral-growth-plan.md
docs/implementation/: windows-support-plan.md
docs/marketing/: launch-drafts.md
examples/: mdns_coexist.rs
packaging/client/: README.md  docker-compose.yml  numa.toml
packaging/relay/: Caddyfile  README.md  docker-compose.yml
scripts/: bench-recursive.sh  benchmark.sh  generate-blog-index.sh  record-demo.sh  release.sh  serve-site.sh  test-ubuntu.sh  update-homebrew-formula.py
site/: CNAME  blog-template.html  dashboard.html  index.html
site/blog/: dns-from-scratch.html  dnssec-from-scratch.html  index.html
site/blog/posts/: dot-from-scratch.html
site/fonts/: fonts.css
src/: api.rs  blocklist.rs  bootstrap_resolver.rs  buffer.rs  cache.rs  config.rs  ctx.rs  dnssec.rs  doh.rs  dot.rs  forward.rs  header.rs  health.rs  lan.rs  lib.rs  main.rs  mobile_api.rs  mobileconfig.rs  override_store.rs  packet.rs  pp2.rs  pp2_udp.rs  proxy.rs  query_log.rs  question.rs  record.rs  recursive.rs  serve.rs  service_store.rs  setup_phone.rs  srtt.rs  stats.rs  svcb.rs  system_dns.rs  tcp.rs  testutil.rs  tls.rs  windows_service.rs  wire.rs
tests/: integration.sh  network-probe.sh  soa_compression_bug.rs
tests/docker/: hold53.py  install-no-system-dns.sh  install-systemd.sh  install-trust.sh  issue-81.sh  self-resolver-loop.sh  smoke-arch.sh  smoke-port53.sh
tests/docker/dnsdist-numa-l7/: README.md  dnsdist.conf  docker-compose.yml  numa.toml  smoke.sh
tests/manual/: install-trust-macos.sh
